Navigation: Fix font size on small screen submenus

--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -68,7 +68,7 @@
 	}
 
 	& .wp-block-navigation__container .wp-block-navigation__submenu-container {
-		font-size: inherit;
+		font-size: 15px;
 		gap: 0.5em;
 		padding-bottom: calc(var(--wp--style--block-gap) / 2);
 		padding-left: calc(var(--wp--style--block-gap) / 2);
